// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostBodyAdditionalContent Should not have youtube preview if metadata type is not opengraph even when url matches youtube regex 1`] = `
<Connect(PostAttachmentOpenGraph)
  imagesMetadata={
    Object {
      "imageUrl.jpg": Object {
        "format": "jpeg",
        "height": 480,
        "width": 360,
      },
    }
  }
  isReplyPost={false}
  link="https://youtu.be/n_4CVqKOCm8"
  openGraphData={
    Object {
      "images": Array [
        Object {
          "height": 360,
          "secure_url": "secureUrl.jpg",
          "width": 480,
        },
      ],
      "url": "",
    }
  }
  theme={
    Object {
      "awayIndicator": "#ffbc42",
      "buttonBg": "#166de0",
      "buttonColor": "#ffffff",
      "centerChannelBg": "#ffffff",
      "centerChannelColor": "#3d3c40",
      "codeTheme": "github",
      "dndIndicator": "#f74343",
      "errorTextColor": "#fd5960",
      "linkColor": "#2389d7",
      "mentionBg": "#ffffff",
      "mentionBj": "#ffffff",
      "mentionColor": "#145dbf",
      "mentionHighlightBg": "#ffe577",
      "mentionHighlightLink": "#166de0",
      "newMessageSeparator": "#ff8800",
      "onlineIndicator": "#06d6a0",
      "sidebarBg": "#145dbf",
      "sidebarHeaderBg": "#1153ab",
      "sidebarHeaderTextColor": "#ffffff",
      "sidebarText": "#ffffff",
      "sidebarTextActiveBorder": "#579eff",
      "sidebarTextActiveColor": "#ffffff",
      "sidebarTextHoverBg": "#4578bf",
      "sidebarUnreadText": "#ffffff",
      "type": "Mattermost",
    }
  }
/>
`;

exports[`PostBodyAdditionalContent Use default image when metadata does not exist 1`] = `
<TouchableWithFeedbackIOS
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "justifyContent": "flex-start",
        "marginBottom": 6,
        "marginTop": 10,
      },
      Object {
        "height": 150,
      },
    ]
  }
  type="opacity"
>
  <ForwardRef(forwardConnectRef)
    imageUri="https://i.ytimg.com/vi/n_4CVqKOCm8/hqdefault.jpg"
    isBackgroundImage={true}
    onError={[Function]}
    resizeMode="cover"
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 3,
          "justifyContent": "center",
          "marginVertical": 1,
        },
        Object {
          "height": 150,
          "width": 297,
        },
      ]
    }
    thumbnailUri="https://i.ytimg.com/vi/n_4CVqKOCm8/default.jpg"
  >
    <TouchableWithFeedbackIOS
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
      type="opacity"
    >
      <Image
        onPress={[Function]}
        source={
          Object {
            "testUri": "../../../dist/assets/images/icons/youtube-play-icon.png",
          }
        }
      />
    </TouchableWithFeedbackIOS>
  </ForwardRef(forwardConnectRef)>
</TouchableWithFeedbackIOS>
`;

exports[`PostBodyAdditionalContent Use opengraph data when metadata exists 1`] = `
<TouchableWithFeedbackIOS
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "justifyContent": "flex-start",
        "marginBottom": 6,
        "marginTop": 10,
      },
      Object {
        "height": 150,
      },
    ]
  }
  type="opacity"
>
  <ForwardRef(forwardConnectRef)
    imageUri="secureUrl.jpg"
    isBackgroundImage={true}
    onError={[Function]}
    resizeMode="cover"
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 3,
          "justifyContent": "center",
          "marginVertical": 1,
        },
        Object {
          "height": 150,
          "width": 297,
        },
      ]
    }
    thumbnailUri="secureUrl.jpg"
  >
    <TouchableWithFeedbackIOS
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
      type="opacity"
    >
      <Image
        onPress={[Function]}
        source={
          Object {
            "testUri": "../../../dist/assets/images/icons/youtube-play-icon.png",
          }
        }
      />
    </TouchableWithFeedbackIOS>
  </ForwardRef(forwardConnectRef)>
</TouchableWithFeedbackIOS>
`;
